# capstone-project-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-simple.txt  requirements.txt  setup.py  start_server.bat  start_server.py
app/: __init__.py  main.py
app/agents/: README.md  __init__.py  production_workflow.py  production_workflow_simple.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  config.py  config_simple.py  exceptions.py  langsmith_client.py  logger.py  prompt_manager.py  security.py  tracing.py
app/db/: __init__.py  init_db.py  models.py  postgres_session.py  session.py
app/services/: __init__.py  batch_processor.py  investigation_service.py  monitoring_service.py  postgres_transaction_service.py  report_exporter.py  sqlite_transaction_service.py  transaction_service.py
app/utils/: __init__.py  accuracy_metrics.py  aml_data_loader.py  audit_logger.py  validators.py
data/kyc_documents/: customer_CRIM000.txt  customer_CRIM001.txt  customer_CRIM002.txt  customer_CRIM003.txt  customer_CRIM004.txt  customer_CRIM005.txt  customer_CRIM006.txt  customer_CRIM007.txt  customer_CRIM008.txt  customer_CRIM009.txt  customer_LEG000.txt  customer_LEG001.txt  customer_LEG002.txt  customer_LEG003.txt  customer_LEG004.txt  customer_LEG005.txt  customer_LEG006.txt  customer_LEG007.txt  customer_LEG008.txt  customer_LEG009.txt  customer_LEG010.txt  customer_LEG011.txt  customer_LEG012.txt  customer_LEG013.txt  customer_LEG014.txt  customer_LEG015.txt  customer_LEG016.txt  customer_LEG017.txt  customer_LEG018.txt  customer_LEG019.txt  customer_LEG020.txt  customer_LEG021.txt  customer_LEG022.txt  customer_LEG023.txt  customer_LEG024.txt  (+15 more)
docs/: PROJECT_ORGANIZATION.md  README.md
examples/: README.md  langsmith_integration_demo.py
notebooks/: 01_database_setup.ipynb  01_exploration.ipynb  02_document_chunking.ipynb  03_agent_testing.ipynb  04_api_testing.ipynb  05_aml_investigation_demo.ipynb  06_langgraph_workflow_testing.ipynb  Module_8_MAS_Transaction_Monitoring_Solution.ipynb  README.md  langgraph_invocation_test.py  requirements.txt  simple_invocation_example.py
prompts/: behavior_analysis.yaml  document_analysis.yaml  edd_report.yaml  production_prompts.yaml  risk_assessment.yaml  sar_generation.yaml
scripts/: README.md  deploy_prompts.py  generate_synthetic_data.py  init_database.py  load_aml_data.py  load_financial_data.py  test_postgres_connection.py
src/: __init__.py  main.py
tests/: test_aml_workflow.py
(+55 files in other folders)
